--- a/index.html
+++ b/index.html
@@ -28,12 +28,356 @@
           <button class="hero__cta-button">Get in touch</button>
         </div>
         <div class="hero__social-links">
-          <a href="#" class="hero__social-link hero__linkedin">LinkedIn</a>
-          <a href="#" class="hero__social-link hero__github">GitHub</a>
-          <a href="#" class="hero__social-link hero__instagram">Instagram</a>
+          <ul class="socials">
+            <li class="socials__item">
+              <a
+                class="socials__item-link link socials__item-link--bg-gray-col-white"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a
+                class="socials__item-link link socials__item-link--bg-gray-col-white"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-GitHub"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials__item">
+              <a
+                class="socials__item-link link socials__item-link--bg-gray-col-white"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="socials__item-icon" width="20" height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="container">
+          <div>
+            <ul>
+              <li>
+                <p><span>25</span>Saticfied Customers</p>
+                <img src="./images/about1.jpg" alt="" />
+              </li>
+              <li>
+                <p><span>8</span>Year of experience</p>
+                <img src="./images/about2.jpg" alt="" />
+              </li>
+            </ul>
+            <h2><span>01</span>about me</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+              officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+              amet.
+            </p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+              officia consequat duis enim velit mollit.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="stacks">
+        <div class="container">
+          <h2 class="hidden">Stacks</h2>
+          <ul>
+            <li>
+              <svg width="105" height="28">
+                <use href="./images/group.svg"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="105" height="28">
+                <use href="./images/group.svg"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="105" height="28">
+                <use href="./images/group.svg"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="105" height="28">
+                <use href="./images/group.svg"></use>
+              </svg>
+            </li>
+            <li>
+              <svg width="105" height="28">
+                <use href="./images/group.svg"></use>
+              </svg>
+            </li>
+          </ul>
+          <div>
+            <h3>let’s work together on Your Next Project HIRE ME NOW Download CV</h3>
+            <button class="">HIRE ME NOW</button>
+            <button type="" class="">
+              <svg class="" width="16" height="16">
+                <use href="./images/vector-btn.svg"></use>
+              </svg>
+              Download CV
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="contaiber">
+          <h2><span>02</span>my service</h2>
+          <ul>
+            <li>
+              <div>
+                <svg class="" width="32" height="32">
+                  <use href="./images/service-icon.svg"></use>
+                </svg>
+                <h3>UI/UX Design</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis
+                  enim velit ullamco
+                </p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <svg class="" width="32" height="32">
+                  <use href="./images/service-icon.svg"></use>
+                </svg>
+                <h3>UI/UX Design</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis
+                  enim velit ullamco
+                </p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <svg class="" width="32" height="32">
+                  <use href="./images/service-icon.svg"></use>
+                </svg>
+                <h3>UI/UX Design</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis
+                  enim velit ullamco
+                </p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <svg class="" width="32" height="32">
+                  <use href="./images/service-icon.svg"></use>
+                </svg>
+                <h3>UI/UX Design</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Vuis
+                  enim velit ullamco
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div>
+            <h2><span>03</span>portfolio</h2>
+            <ul>
+              <li>
+                <button>ALL</button>
+              </li>
+              <li>
+                <button>ALL</button>
+              </li>
+              <li>
+                <button>ALL</button>
+              </li>
+              <li>
+                <button>ALL</button>
+              </li>
+              <li>
+                <button>ALL</button>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <button>
+                  <svg class="" width="20" height="20">
+                    <use href="./images/left-arrow.svg"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button>
+                  <svg class="" width="20" height="20">
+                    <use href="./images/right-arrow.svg"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
+          <ul portfolio-list>
+            <li class="portfolio-list__item">
+              <a class="portfolio-list__item-link link" href="#">
+                <div class="portfolio-list__item-img-wrap">
+                  <img src="./images/portfolio.jpg" width="364" height="249" alt="" />
+                  <div>
+                    <h3>Mobile desing</h3>
+                    <p class="portfolio-list__item-overlay">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list__item">
+              <a class="portfolio-list__item-link link" href="#">
+                <div class="portfolio-list__item-img-wrap">
+                  <img src="./images/portfolio.jpg" width="364" height="249" alt="" />
+                  <div>
+                    <h3>Mobile desing</h3>
+                    <p class="portfolio-list__item-overlay">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list__item">
+              <a class="portfolio-list__item-link link" href="#">
+                <div class="portfolio-list__item-img-wrap">
+                  <img src="./images/portfolio.jpg" width="364" height="249" alt="" />
+                  <div>
+                    <h3>Mobile desing</h3>
+                    <p class="portfolio-list__item-overlay">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <img src="./images/testomonial.jpg" width="364" height="422" alt="" />
+          <div>
+            <h2><span>04</span>testomonial</h2>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+              officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+              amet.
+            </p>
+            <p>Esther Howard<span>CEO of Adebe</span></p>
+            <ul>
+              <li>
+                <button>
+                  <svg class="" width="20" height="20">
+                    <use href="./images/left-arrow.svg"></use>
+                  </svg>
+                </button>
+              </li>
+              <li>
+                <button>
+                  <svg class="" width="20" height="20">
+                    <use href="./images/right-arrow.svg"></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div>
+          <h2><span>05</span>contact</h2>
+          <address class="">
+            <ul class="">
+              <li class="">
+                <a class="" href="tel:+380961111111">
+                  <svg class="" width="24" height="24">
+                    <use href="./images/phone.svg"></use>
+                  </svg>
+                  <p>Phone</p>
+                  <p>(219) 555-0114</p></a
+                >
+              </li>
+              <li class="">
+                <a class="" href="mailto:info@devstudio.com">
+                  <svg class="" width="24" height="24">
+                    <use href="./images/email.svg"></use>
+                  </svg>
+                  <p>Email</p>
+                  <p>robertfox@example.com</p></a
+                >
+              </li>
+              <li class="">
+                <a class="" href="" target="_blank" rel="noopener noreferrer">
+                  <svg class="" width="24" height="24">
+                    <use href="./images/point.svg"></use>
+                  </svg>
+                  <p>Address 4517 Washington Ave. Manchester, Kentucky 39495</p></a
+                >
+              </li>
+            </ul>
+            <div class="hero__social-links">
+              <ul class="socials">
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link socials__item-link--bg-gray-col-white"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link socials__item-link--bg-gray-col-white"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-GitHub"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a
+                    class="socials__item-link link socials__item-link--bg-gray-col-white"
+                    href="#"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    <svg class="socials__item-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </address>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
