--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 rel="noopener noreferrer nofollow"
               >
                 <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/telegram.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-telegram"></use>
                 </svg>
               </a>
             </li>
@@ -66,7 +66,7 @@
                 rel="noopener noreferrer nofollow"
               >
                 <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/github1.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-github1"></use>
                 </svg>
               </a>
             </li>
@@ -78,7 +78,7 @@
                 rel="noopener noreferrer nofollow"
               >
                 <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/linkedin.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -90,27 +90,34 @@
                 rel="noopener noreferrer nofollow"
               >
                 <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/instagram.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
       </section>
-      <section class="about">
+      <section class="about section">
         <div class="container">
           <div class="about__content">
             <ul class="about__stats">
               <li class="about__stat">
-                <p><span class="about__stat-value">25</span>Saticfied Customers</p>
                 <img src="./images/about1.jpg" alt="" class="about__stat-image" />
+                <div class="about__stat-info">
+                  <p class="abut__stat-text">Saticfied<br />Customers</p>
+                  <span class="title-accent">25</span>
+                </div>
               </li>
               <li class="about__stat">
-                <p><span class="about__stat-value">8</span>Year of experience</p>
+                <div class="about__stat-info">
+                  <span class="title-accent">8</span>
+                  <p class="abut__stat-text">Year<br />of experience</p>
+                </div>
+
                 <img src="./images/about2.jpg" alt="" class="about__stat-image" />
               </li>
             </ul>
-            <h2 class="about__title"><span class="about__number">01</span>about me</h2>
+            <h2 class="title"><span class="title-accent">01</span>about me</h2>
             <p class="about__description">
               Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
               officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
@@ -123,58 +130,56 @@
           </div>
         </div>
       </section>
-      <section class="stacks">
+      <section class="stacks section">
         <div class="container">
-          <h2 class="stacks__title hidden">Stacks</h2>
+          <h2 class="visually-hidden">Stacks</h2>
           <ul class="stacks__list">
             <li class="stacks__item">
               <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/group.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-group"></use>
               </svg>
             </li>
             <li class="stacks__item">
               <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/group.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-group"></use>
               </svg>
             </li>
             <li class="stacks__item">
               <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/group.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-group"></use>
               </svg>
             </li>
             <li class="stacks__item">
               <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/group.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-github"></use>
               </svg>
             </li>
             <li class="stacks__item">
               <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/group.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-group"></use>
               </svg>
             </li>
           </ul>
           <div class="stacks__actions">
-            <h3 class="stacks__actions-title">
-              let’s work together on Your Next Project HIRE ME NOW Download CV
-            </h3>
+            <h3 class="stacks__actions-title">let’s work together on Your Next Project</h3>
             <button class="stacks__hire-button button">HIRE ME NOW</button>
             <button type="button" class="stacks__download-button">
               <svg class="stacks__download-icon" width="16" height="16">
-                <use href="./images/vector-btn.svg"></use>
+                <use href="./images/symbol-defs.svg#icon-vector-btn"></use>
               </svg>
               Download CV
             </button>
           </div>
         </div>
       </section>
-      <section class="service">
-        <div class="container">
-          <h2 class="service__title"><span class="service__number">02</span>my service</h2>
+      <section class="service section">
+        <div class="container service-container">
+          <h2 class="title service-title"><span class="title-accent">02</span>my service</h2>
           <ul class="service__list">
             <li class="service__item">
               <div class="service__item-content">
                 <svg class="service__item-icon" width="32" height="32">
-                  <use href="./images/service-icon.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-service-icon"></use>
                 </svg>
                 <h3 class="service__item-title">UI/UX Design</h3>
                 <p class="service__item-description">
@@ -186,7 +191,7 @@
             <li class="service__item">
               <div class="service__item-content">
                 <svg class="service__item-icon" width="32" height="32">
-                  <use href="./images/service-icon.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-service-icon"></use>
                 </svg>
                 <h3 class="service__item-title">UI/UX Design</h3>
                 <p class="service__item-description">
@@ -198,7 +203,7 @@
             <li class="service__item">
               <div class="service__item-content">
                 <svg class="service__item-icon" width="32" height="32">
-                  <use href="./images/service-icon.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-service-icon"></use>
                 </svg>
                 <h3 class="service__item-title">UI/UX Design</h3>
                 <p class="service__item-description">
@@ -210,7 +215,7 @@
             <li class="service__item">
               <div class="service__item-content">
                 <svg class="service__item-icon" width="32" height="32">
-                  <use href="./images/service-icon.svg"></use>
+                  <use href="./images/symbol-defs.svg#icon-service-icon"></use>
                 </svg>
                 <h3 class="service__item-title">UI/UX Design</h3>
                 <p class="service__item-description">
@@ -222,39 +227,39 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <div class="portfolio__content">
-            <h2 class="portfolio__title"><span class="portfolio__number">03</span>portfolio</h2>
+            <h2 class="title"><span class="title-accent">03</span>portfolio</h2>
             <ul class="portfolio__filter">
               <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button">ALL</button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ALL</button>
+                <button class="portfolio__filter-button">ui/ux design</button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ALL</button>
+                <button class="portfolio__filter-button">PRODUCT DESIGN</button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ALL</button>
+                <button class="portfolio__filter-button">BRANDING</button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ALL</button>
+                <button class="portfolio__filter-button">WEB DESIGN</button>
               </li>
             </ul>
             <ul class="portfolio__pagination">
               <li class="portfolio__pagination-item">
-                <button>
+                <button class="portfolio__pagination-btn">
                   <svg class="portfolio__pagination-icon" width="20" height="20">
-                    <use href="./images/left-arrow.svg"></use>
+                    <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                   </svg>
                 </button>
               </li>
               <li class="portfolio__pagination-item">
-                <button>
+                <button class="portfolio__pagination-btn">
                   <svg class="portfolio__pagination-icon" width="20" height="20">
-                    <use href="./images/right-arrow.svg"></use>
+                    <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                   </svg>
                 </button>
               </li>
@@ -315,8 +320,9 @@
           </ul>
         </div>
       </section>
-      <section class="testimonial">
+      <section class="testimonial section">
         <div class="container">
+          <h2 class="title"><span class="title-accent">04</span>testomonial</h2>
           <div class="testimonial__content">
             <img
               src="./images/testomonial.jpg"
@@ -326,9 +332,6 @@
               class="testimonial__image"
             />
             <div class="testimonial__info">
-              <h2 class="testimonial__title">
-                <span class="testimonial__number">04</span>testomonial
-              </h2>
               <p class="testimonial__text">
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                 officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
@@ -341,14 +344,14 @@
                 <li class="testimonial__pagination-item">
                   <button>
                     <svg class="testimonial__pagination-icon" width="20" height="20">
-                      <use href="./images/left-arrow.svg"></use>
+                      <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                     </svg>
                   </button>
                 </li>
                 <li class="testimonial__pagination-item">
                   <button>
                     <svg class="testimonial__pagination-icon" width="20" height="20">
-                      <use href="./images/right-arrow.svg"></use>
+                      <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                     </svg>
                   </button>
                 </li>
@@ -361,13 +364,13 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__content">
-          <h2 class="footer__title"><span class="footer__number">05</span>contact</h2>
+          <h2 class="title"><span class="title-accent">05</span>contact</h2>
           <address class="footer__address">
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
                 <a class="footer__contact-link" href="tel:+380961111111">
                   <svg class="footer__contact-icon" width="24" height="24">
-                    <use href="./images/phone.svg"></use>
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>
                   <p class="footer__contact-type">Phone</p>
                   <p class="footer__contact-detail">(219) 555-0114</p>
@@ -376,7 +379,7 @@
               <li class="footer__contact-item">
                 <a class="footer__contact-link" href="mailto:info@devstudio.com">
                   <svg class="footer__contact-icon" width="24" height="24">
-                    <use href="./images/email.svg"></use>
+                    <use href="./images/symbol-defs.svg#icon-email"></use>
                   </svg>
                   <p class="footer__contact-type">Email</p>
                   <p class="footer__contact-detail">robertfox@example.com</p>
@@ -385,7 +388,7 @@
               <li class="footer__contact-item">
                 <a class="footer__contact-link" href="#" target="_blank" rel="noopener noreferrer">
                   <svg class="footer__contact-icon" width="24" height="24">
-                    <use href="./images/point.svg"></use>
+                    <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
                   <p class="footer__contact-type">Address</p>
                   <p class="footer__contact-detail">
@@ -405,7 +408,7 @@
                   rel="noopener noreferrer nofollow"
                 >
                   <svg class="footer__social-icon" width="20" height="20">
-                    <use href="./images/"></use>
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -417,7 +420,7 @@
                   rel="noopener noreferrer nofollow"
                 >
                   <svg class="footer__social-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-GitHub"></use>
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
