--- a/index.html
+++ b/index.html
@@ -248,17 +248,17 @@
                 <button class="portfolio__filter-button">WEB DESIGN</button>
               </li>
             </ul>
-            <ul class="portfolio__pagination">
-              <li class="portfolio__pagination-item">
-                <button class="portfolio__pagination-btn">
-                  <svg class="portfolio__pagination-icon" width="20" height="20">
+            <ul class="pagination">
+              <li class="pagination-item">
+                <button class="pagination-btn">
+                  <svg class="pagination-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                   </svg>
                 </button>
               </li>
-              <li class="portfolio__pagination-item">
-                <button class="portfolio__pagination-btn">
-                  <svg class="portfolio__pagination-icon" width="20" height="20">
+              <li class="pagination-item">
+                <button class="pagination-btn">
+                  <svg class="pagination-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                   </svg>
                 </button>
@@ -338,19 +338,19 @@
                 amet.
               </p>
               <p class="testimonial__author">
-                Esther Howard<span class="testimonial__position">CEO of Adebe</span>
+                <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
               </p>
-              <ul class="testimonial__pagination">
-                <li class="testimonial__pagination-item">
-                  <button>
-                    <svg class="testimonial__pagination-icon" width="20" height="20">
+              <ul class="pagination">
+                <li class="pagination-item">
+                  <button class="pagination-btn">
+                    <svg class="pagination-icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-left-arrow"></use>
                     </svg>
                   </button>
                 </li>
-                <li class="testimonial__pagination-item">
-                  <button>
-                    <svg class="testimonial__pagination-icon" width="20" height="20">
+                <li class="pagination-item">
+                  <button class="pagination-btn">
+                    <svg class="pagination-icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-right-arrow"></use>
                     </svg>
                   </button>
@@ -362,9 +362,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer__content">
-          <h2 class="title"><span class="title-accent">05</span>contact</h2>
+          <h2 class="title footer-title"><span class="title-accent">05</span>contact</h2>
           <address class="footer__address">
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
@@ -372,8 +372,10 @@
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-phone"></use>
                   </svg>
-                  <p class="footer__contact-type">Phone</p>
-                  <p class="footer__contact-detail">(219) 555-0114</p>
+                  <div class="footer__contact-info">
+                    <p class="footer__contact-type">Phone</p>
+                    <p class="footer__contact-detail">(219) 555-0114</p>
+                  </div>
                 </a>
               </li>
               <li class="footer__contact-item">
@@ -381,8 +383,10 @@
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-email"></use>
                   </svg>
-                  <p class="footer__contact-type">Email</p>
-                  <p class="footer__contact-detail">robertfox@example.com</p>
+                  <div class="footer__contact-info">
+                    <p class="footer__contact-type">Email</p>
+                    <p class="footer__contact-detail">robertfox@example.com</p>
+                  </div>
                 </a>
               </li>
               <li class="footer__contact-item">
@@ -390,49 +394,63 @@
                   <svg class="footer__contact-icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-point"></use>
                   </svg>
-                  <p class="footer__contact-type">Address</p>
-                  <p class="footer__contact-detail">
-                    4517 Washington Ave. Manchester, Kentucky 39495
-                  </p>
+                  <div class="footer__contact-info">
+                    <p class="footer__contact-type">Address</p>
+                    <p class="footer__contact-detail">
+                      4517 Washington Ave. Manchester, Kentucky 39495
+                    </p>
+                  </div>
                 </a>
               </li>
             </ul>
           </address>
-          <div class="footer__social">
-            <ul class="footer__social-list">
-              <li class="footer__social-item">
+          <div class="footer__socials">
+            <ul class="socials">
+              <li class="socials__item">
                 <a
-                  class="footer__social-link link footer__social-link--bg-gray-col-white"
+                  class="socials__item-link link"
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
-                  <svg class="footer__social-icon" width="20" height="20">
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-github1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
-              <li class="footer__social-item">
+              <li class="socials__item">
                 <a
-                  class="footer__social-link link footer__social-link--bg-gray-col-white"
+                  class="socials__item-link link"
                   href="#"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                 >
-                  <svg class="footer__social-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer__social-item">
-                <a
-                  class="footer__social-link link footer__social-link--bg-gray-col-white"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                >
-                  <svg class="footer__social-icon" width="20" height="20">
-                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -441,7 +459,8 @@
         </div>
         <div class="footer__form-wrapper">
           <b class="footer__form-info"
-            >I’m always open to discussing product design work or partnership</b
+            >I’m always open to discussing
+            <span class="footer__form-info--accent">product design work</span> or partnership</b
           >
           <form class="footer__form">
             <div class="footer__form-fields">
