--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer section">
       <div class="container footer-container">
         <div class="footer__content">
           <h2 class="title footer-title"><span class="title-accent">05</span>contact</h2>
@@ -457,47 +457,46 @@
             </ul>
           </div>
         </div>
-        <div class="footer__form-wrapper">
-          <b class="footer__form-info"
+        <div class="form-wrapper">
+          <b class="form-info"
             >I’m always open to discussing
-            <span class="footer__form-info--accent">product design work</span> or partnership</b
+            <span class="form-info--accent">product design work</span> or partnership</b
           >
-          <form class="footer__form">
-            <div class="footer__form-fields">
-              <label for="name" class="footer__form-label"
-                >Your name*
-                <input
-                  type="text"
-                  name="name"
-                  id="name"
-                  class="footer__form-input"
-                  placeholder="Enter your name here"
-                  required
-                />
-              </label>
-              <label for="email" class="footer__form-label"
-                >Email Address*
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  class="footer__form-input"
-                  placeholder="Enter your email address"
-                  required
-                />
-              </label>
+          <form class="form">
+            <div class="form-field">
+              <label for="name" class="form-label">Your name*</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                class="form-input"
+                placeholder="Enter your name here"
+                required
+              />
             </div>
-            <label for="message" class="footer__form-label"
-              >Message
+            <div class="form-field">
+              <label for="email" class="form-label">Email Address*</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="form-input"
+                placeholder="Enter your email address"
+                required
+              />
+            </div>
+            <div class="form-field">
+              <label for="message" class="form-label">Message</label>
               <textarea
                 name="message"
                 id="message"
-                class="footer__form-textarea"
+                class="form-textarea form-input"
                 placeholder="Write your message here"
                 required
               ></textarea>
-            </label>
-            <button type="submit" class="footer__form-button button">send message</button>
+            </div>
+
+            <button type="submit" class="form-button button">send message</button>
           </form>
         </div>
       </div>
