mobile-menu-open-btn

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         </ul>
         <a href="" class="nav__link nav__link--contact">contacts</a>
       </nav>
+
+      <button class="mobile-menu__btn--open">
+        <svg class="mobile-menu__icon--open" width="21px" height="13px">
+          <use href="./images/symbol-defs.svg#icon-burger"></use>
+        </svg>
+      </button>
     </header>
     <main class="main">
       <section class="hero">
