--- a/index.html
+++ b/index.html
@@ -44,63 +44,65 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="hero__content">
-          <p class="hero__greatings"><span class="hero__greatings-accent">Hello</span>, I'm</p>
-          <h1 class="hero__title">Oleksandr Moskalets</h1>
-          <h2 class="hero__description">Fullstack developer</h2>
-          <button class="hero__cta-button button">Get in touch</button>
-        </div>
-        <div class="hero__social-links">
-          <ul class="socials socials--column">
-            <li class="socials__item">
-              <a
-                class="socials__item-link link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-telegram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-github1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="socials__item">
-              <a
-                class="socials__item-link link"
-                href="#"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg class="socials__item-icon" width="20" height="20">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="container hero-container">
+          <div class="hero__content">
+            <p class="hero__greatings"><span class="hero__greatings-accent">Hello</span>, I'm</p>
+            <h1 class="hero__title">Oleksandr Moskalets</h1>
+            <h2 class="hero__description">Fullstack developer</h2>
+            <button class="hero__cta-button button">Get in touch</button>
+          </div>
+          <div class="hero__social-links">
+            <ul class="socials socials--column">
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-telegram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-github1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials__item">
+                <a
+                  class="socials__item-link link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg class="socials__item-icon" width="20" height="20">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="about section">
