stacks-services-desktop

--- a/index.html
+++ b/index.html
@@ -146,29 +146,39 @@
           <h2 class="visually-hidden">Stacks</h2>
           <ul class="stacks__list">
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-group"></use>
-              </svg>
+              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <svg class="stacks__icon" width="105" height="28">
+                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                </svg>
+              </a>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-group"></use>
-              </svg>
+              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <svg class="stacks__icon" width="105" height="28">
+                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                </svg>
+              </a>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-group"></use>
-              </svg>
+              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <svg class="stacks__icon" width="105" height="28">
+                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                </svg>
+              </a>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-github"></use>
-              </svg>
+              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <svg class="stacks__icon" width="105" height="28">
+                  <use href="./images/symbol-defs.svg#icon-github"></use>
+                </svg>
+              </a>
             </li>
             <li class="stacks__item">
-              <svg class="stacks__icon" width="105" height="28">
-                <use href="./images/symbol-defs.svg#icon-group"></use>
-              </svg>
+              <a class="stacks__link" href="#" target="_blank" rel="noopener noreferrer nofollow">
+                <svg class="stacks__icon" width="105" height="28">
+                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                </svg>
+              </a>
             </li>
           </ul>
           <div class="stacks__actions">
