service-portfolio-desktop

--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
             <h2 class="title"><span class="title-accent">03</span>portfolio</h2>
             <ul class="portfolio__filter">
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ALL</button>
+                <button class="portfolio__filter-button portfolio__filter-button--current">
+                  ALL
+                </button>
               </li>
               <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button">ui/ux design</button>
@@ -287,53 +289,47 @@
             </ul>
           </div>
           <ul class="portfolio__list" portfolio-list>
-            <li class="portfolio__list-item">
-              <a class="portfolio__list-item-link link" href="#">
-                <div class="portfolio__list-item-img-wrap">
-                  <img
-                    src="./images/portfolio.jpg"
-                    width="364"
-                    height="249"
-                    alt=""
-                    class="portfolio__list-item-img"
-                  />
-                  <div class="portfolio__list-item-overlay">
-                    <h3 class="portfolio__list-item-title">Mobile desing</h3>
-                    <p class="portfolio__list-item-subtitle">UI/UX Design</p>
+            <li class="portfolio__item">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
+                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
                   </div>
                 </div>
               </a>
             </li>
-            <li class="portfolio__list-item">
-              <a class="portfolio__list-item-link link" href="#">
-                <div class="portfolio__list-item-img-wrap">
+            <li class="portfolio__item">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
                   <img
                     src="./images/portfolio.jpg"
                     width="364"
                     height="249"
                     alt=""
-                    class="portfolio__list-item-img"
+                    class="portfolio__item-img"
                   />
-                  <div class="portfolio__list-item-overlay">
-                    <h3 class="portfolio__list-item-title">Mobile desing</h3>
-                    <p class="portfolio__list-item-subtitle">UI/UX Design</p>
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
                   </div>
                 </div>
               </a>
             </li>
-            <li class="portfolio__list-item">
-              <a class="portfolio__list-item-link link" href="#">
-                <div class="portfolio__list-item-img-wrap">
+            <li class="portfolio__item">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
                   <img
                     src="./images/portfolio.jpg"
                     width="364"
                     height="249"
                     alt=""
-                    class="portfolio__list-item-img"
+                    class="portfolio__item-img"
                   />
-                  <div class="portfolio__list-item-overlay">
-                    <h3 class="portfolio__list-item-title">Mobile desing</h3>
-                    <p class="portfolio__list-item-subtitle">UI/UX Design</p>
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
                   </div>
                 </div>
               </a>
