--- a/index.html
+++ b/index.html
@@ -451,6 +451,24 @@
                       <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
                     </p>
                   </div>
+                  <div class="testimonial__info testimonial-slider__slide swiper-slide">
+                    <p class="testimonial__text testimonial-slider__text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, veniam
+                      corrupti
+                    </p>
+                    <p class="testimonial__author testimonial-slider__author">
+                      <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
+                    </p>
+                  </div>
+                  <div class="testimonial__info testimonial-slider__slide swiper-slide">
+                    <p class="testimonial__text testimonial-slider__text">
+                      Quo ex, distinctio, illo qui voluptas culpa quasi iusto repellat vero itaque
+                      earum quibusdam quae sint assumenda commodi est?
+                    </p>
+                    <p class="testimonial__author testimonial-slider__author">
+                      <span class="testimonial__name">Esther Howard</span><br />CEO of Adebe
+                    </p>
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
