portfolio-buttons-js

--- a/index.html
+++ b/index.html
@@ -337,16 +337,16 @@
                 </button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">ui/ux design</button>
+                <button class="portfolio__filter-button">ui-ux</button>
               </li>
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">PRODUCT DESIGN</button>
+                <button class="portfolio__filter-button">PRODUCT-DESIGN</button>
               </li>
-              <li class="portfolio__filter-item">
+              <!-- <li class="portfolio__filter-item">
                 <button class="portfolio__filter-button">BRANDING</button>
-              </li>
+              </li> -->
               <li class="portfolio__filter-item">
-                <button class="portfolio__filter-button">WEB DESIGN</button>
+                <button class="portfolio__filter-button">WEB-DESIGN</button>
               </li>
             </ul>
             <ul class="pagination">
@@ -367,7 +367,7 @@
             </ul>
           </div>
           <ul class="portfolio__list" portfolio-list>
-            <li class="portfolio__item">
+            <li class="portfolio__item ui-ux">
               <a class="portfolio__item-link link" href="#">
                 <div class="portfolio__item-img-wrap">
                   <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
@@ -378,11 +378,11 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__item">
+            <li class="portfolio__item product-design">
               <a class="portfolio__item-link link" href="#">
                 <div class="portfolio__item-img-wrap">
                   <img
-                    src="./images/portfolio.jpg"
+                    src="./images/portfolio2.jpg"
                     width="364"
                     height="249"
                     alt=""
@@ -395,11 +395,56 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio__item">
+            <li class="portfolio__item web-design">
               <a class="portfolio__item-link link" href="#">
                 <div class="portfolio__item-img-wrap">
                   <img
-                    src="./images/portfolio.jpg"
+                    src="./images/portfolio3.jpg"
+                    width="364"
+                    height="249"
+                    alt=""
+                    class="portfolio__item-img"
+                  />
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item ui-ux">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
+                  <img src="./images/portfolio.jpg" alt="" class="portfolio__item-img" />
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item product-design">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    width="364"
+                    height="249"
+                    alt=""
+                    class="portfolio__item-img"
+                  />
+                  <div class="portfolio__item-overlay">
+                    <h3 class="portfolio__item-title">Mobile desing</h3>
+                    <p class="portfolio__item-subtitle">UI/UX Design</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item web-design">
+              <a class="portfolio__item-link link" href="#">
+                <div class="portfolio__item-img-wrap">
+                  <img
+                    src="./images/portfolio3.jpg"
                     width="364"
                     height="249"
                     alt=""
